--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Minimal test spies, stubs and mocks module",
   "main": "index.js",
   "scripts": {
-    "test": "mocha -R spec --recursive test"
+    "test": "mocha -R spec --recursive test",
+    "cover": "istanbul cover ./node_modules/mocha/bin/_mocha --report html -- -R spec"
   },
   "repository": {
     "type": "git",
@@ -24,6 +25,7 @@
   "homepage": "https://github.com/saintedlama/betray#readme",
   "devDependencies": {
     "chai": "^3.2.0",
+    "istanbul": "^0.3.17",
     "mocha": "^2.2.5"
   }
 }
