--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "Minimal test spies, stubs and mocks module",
   "main": "index.js",
   "scripts": {
-    "test": "mocha -R spec --recursive test",
-    "cover": "istanbul cover ./node_modules/mocha/bin/_mocha --report html -- -R spec"
+    "test": "cross-env NODE_ENV=test mocha -R spec --recursive test",
+    "cover": "cross-env NODE_ENV=test istanbul cover ./node_modules/mocha/bin/_mocha --report html -- -R spec"
   },
   "repository": {
     "type": "git",
@@ -25,7 +25,10 @@
   "homepage": "https://github.com/saintedlama/betray#readme",
   "devDependencies": {
     "chai": "^3.2.0",
+    "coveralls": "^2.11.9",
+    "cross-env": "^1.0.8",
     "istanbul": "^0.4.3",
-    "mocha": "^2.2.5"
+    "mocha": "^2.2.5",
+    "mocha-lcov-reporter": "^1.2.0"
   }
 }
